fix overflow

--- a/frontend/src/components/AppLayout/AppLayout.module.css
+++ b/frontend/src/components/AppLayout/AppLayout.module.css
@@ -155,6 +155,7 @@ nav ul {
   top: 10px;
   transition: var(--permanentAnimation);
   z-index: 1000;
+  outline: none;
 }
 
 .menuBtn span {
@@ -225,6 +226,7 @@ nav ul {
     align-items: start;
     position: static;
     height: fit-content;
+    overflow-y: auto;
   }
 
   .menu li {
