--- a/frontend/src/components/ProjectsPage/ProjectsPage.module.css
+++ b/frontend/src/components/ProjectsPage/ProjectsPage.module.css
@@ -116,4 +116,13 @@
     width: 100%;
     margin-bottom: 20px;
   }
+
+  .textPart h2 {
+    white-space: nowrap;
+    grid-column: 1/3;
+  }
+
+  .projectProgress span {
+    grid-column: 2/3;
+  }
 }
